[package]
name = "coinbase-pro-rs"
version = "0.8.1"
authors = ["ae <inv2004@gmail.com>"]
repository = "https://github.com/inv2004/coinbase-pro-rs"
description = "Coinbase pro client for Rust"
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = [ "api-bindings", "cryptography::cryptocurrencies" ]
keywords = [ "exchange", "coinbase", "bitcoin", "websocket" ]

[features]
latency-tests = []

[dependencies]
async-trait = "0.1.81"
base64 = "0.22.1"
chrono = { version = "0.4.9", features = [ "serde" ] }
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30", features = ["compat"] }
hmac = "0.10.1"
hyper = { version = "0.14.2", features = ["stream", "client", "http1"] }
hyper-tls = "0.5.0"
log = "0.4.4"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.9.2"
thiserror = "1.0.22"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"]}
url = "2.5.2"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }

[dev-dependencies]
#pretty_env_logger = "0.4.0"
serial_test = "0.5.1"
